force-app/main/default/objects/Document_Version__c/Document_Version__c.object-meta.xml
<CustomObject>
    <description>Electronic copy of documents to be sent to accounts for acceptance.</description>
    <label>Document Version</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>