force-app/main/default/objects/Document_Version__c/fields/Current_Active_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is checked, then this is the current active version of the document.</description>
    <label>Current Active Version</label>
    <type>Checkbox</type>
</CustomField>