force-app/main/default/objects/Document_Version__c/fields/Document_Text__c.field-meta.xml
<CustomField>
    <fullName>Document_Text__c</fullName>
    <description>The text of the electronic document. Rich text includes images, formatting, etc.</description>
    <label>Document Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>