force-app/main/default/objects/Document_Version__c/fields/Version_Date__c.field-meta.xml
<CustomField>
    <fullName>Version_Date__c</fullName>
    <description>Specified date of the document version.</description>
    <label>Version Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>